crates/macros/tests/ui/http_client/fail/request_missing_method.stderr
error: #[request(...)] requires `method = "<HTTP-METHOD>"` (e.g. #[request(method = "HEAD", path = "/x")])
 --> tests/ui/http_client/fail/request_missing_method.rs:8:5
  |
8 |     #[request(path = "/x")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^
